# Agentic_Ai

./: Cargo.toml  README.md  helloworld.ipynb  helloworld.py  helloworld2.py
FastAPI/: .env  main.py
OPPS/: Oops.py  diary.py
Rust/: rust_check.sh
Rust/agentic_ai_framework/: .gitignore  Cargo.toml
Rust/agentic_ai_framework/agent_core/: Cargo.toml
Rust/agentic_ai_framework/agent_core/src/: lib.rs
Rust/agentic_ai_framework/web_server/: Cargo.toml
Rust/agentic_ai_framework/web_server/src/: main.rs
Rust/rust-ai-project/: Cargo.toml
Web-Designing/: .env  Downloads - Shortcut.lnk  Index.html  Roadmap  crud.py  database.py  init_db.py  main.py  models.py  requirements.txt  schemas.py  style.css  submissions.txt
Web-Designing/extra fils not need but used when db gies erreor/: minimal_test.py  talent_db.sqlite  test.py  test_db.py  test_postgres.py
Web-Designing/static/: style.css
Web-Designing/templates/: Index.html  success.html  view.html
age]/: Cargo.toml
agent-api/: Cargo.toml
agent-api/.shuttle/: config.toml
agent-api/src/: main.rs
clone-foodpanda/: dumy.html  dumy2.html  index.html  script.js  style.css
clonefoodpand/: package-lock.json  package.json  postcss.config.js  tailwind.config.ts
copy-of-nova-ai-studio/: App.tsx  index.html  package-lock.json  package.json
fast_ai/: Cargo.toml
fastapi-final/: requirements.txt
food-clone/: package-lock.json  package.json
test2_api/: main.py  pyproject.toml  requriments.txt
test_api/: main.py  pyproject.toml
web-ui/: .gitignore  package-lock.json  package.json  tailwind.config.js
(+89 files in other folders)
